<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.k11.k.View.CrearUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/as1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtNomUsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_usuario"
                android:textSize="18sp"
                android:inputType="text"
                android:typeface="monospace" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/as2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtContraUsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:typeface="monospace" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/registrar_usuario"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:typeface="monospace" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

